# ai-lawyer-help

./: .env.development  .gitignore  Makefile  docker-compose.yml  pyproject.toml  sam.py  summarizer.py  todo.md
ai/: models.py
ai/migrations/: 0001_vector.py  0002_initial.py
ai/services/: ai_context_feed.py  document_manager.py  embeddings.py  image_manager.py  pdf_manager.py
ai/services/ai/: ai_service.py  image_to_text.py  llm.py
ai/services/prompts/: categorize_image.txt  resume_image.txt  resume_pdf.txt
ai/services/vector_dbs/: chroma.py  postgres.py
api/: serializers.py  urls.py
api/ai_context/: serializers.py  urls.py  views.py
api/customer/: serializers.py  views.py
api/customer/issues/: serializers.py  views.py
api/files/: serializers.py  urls.py  views.py
api/platform/: urls.py
api/platform/customer/: views.py
api/platform/customer/issues/: serializers.py  views.py
common/: admin.py  apps.py  constants.py  models.py  signals.py  tasks.py  utils.py  views.py
common/migrations/: 0001_initial.py
common/services/files/: aws_s3_storage.py  file_direct_upload.py  file_utils.py
common/services/loggers/: app_logger.py  base_logger.py
core/: celery.py  urls.py
core/settings/: __init__.py  ai.py  auth.py  aws.py  base.py  celery.py  enviroment.py  files.py  i18n.py  middlewares.py  tests.py
core/settings/apps/: apps.py  rest_framework.py
customer_onboarding/: tasks.py
infra/development/: script.py
lawfirm/: admin.py  models.py  tasks.py
lawfirm/migrations/: 0001_initial.py
lawfirm/models/: __init__.py  customer.py  lawfirm.py  settings.py
