[project]
name = "ai-lawyer-help"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn>=0.34.0",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.35.54",
    "gunicorn>=23.0.0",
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.3.1",
    "django-filter>=24.3",
    "django-cleanup>=9.0.0",
    "django-storages>=1.14.4",
    "django-silk>=5.3.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "langchain-chroma>=0.2.2",
    "langchain[ollama,openai]>=0.3.19",
    "chromadb>=0.6.3",
    "drf-nested-routers>=0.94.1",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.5.1",
    "langchain-community>=0.3.18",
    "django-types>=0.20.0",
    "pgvector>=0.3.6",
    "langchain-postgres>=0.0.13",
]

[dependency-groups]
dev = [
    "coverage>=7.6.2",
    "drf-yasg>=1.21.9",
    "inflection>=0.5.1",
    "ipdb>=0.13.13",
    "pyyaml>=6.0.2",
    "ruff>=0.6.9",
    "tblib>=3.0.0",
    "uritemplate>=4.1.1",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F403"]

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pyright]
reportIncompatibleVariableOverride = false
typeCheckingMode = "basic"

